--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -73,6 +73,8 @@
     
     .project {
         width: 100%;
-        margin: 5% auto;
+        border: none;
+        padding: initial;
+        margin: 8% auto;
     }
 }
