--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ ul {
 
     section {
       height: initial;
+      margin-top: 8%;
     }
 
     .section-heading {
